[package]
name = "glu-sys"
version = "0.1.3"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Raw GLU and GL Rust bindings"
repository = "https://github.com/MoAlyousef/glu-sys"
keywords = ["bindings", "graphics"]
categories = ["graphics"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.74"
